--- a/TelosysTools/templates/angularjs_html5/templates.cfg
+++ b/TelosysTools/templates/angularjs_html5/templates.cfg
@@ -9,20 +9,20 @@
 # Since v 2.0 the project's variables can be used in file and folder name
 #---------------------------------------------------------
 
-entity ctrl        ; ${BEANNAME_LC}ctrl.js                       ; ${WEB}/jsmodules/${BEANNAME_LC}     ; entityctrl_js.vm
-entity srv        ; ${BEANNAME_LC}srv.js                       ; ${WEB}/jsmodules/${BEANNAME_LC}     ; entitysrv_js.vm
+entity ctrl        ; ${BEANNAME_LC}ctrl.js                       ; ${WEB}/gen/jsmodules/${BEANNAME_LC}     ; entityctrl_js.vm
+entity srv        ; ${BEANNAME_LC}srv.js                       ; ${WEB}/gen/jsmodules/${BEANNAME_LC}     ; entitysrv_js.vm
 
-entity create page        ; create.html                       ; ${WEB}/pages/${BEANNAME_LC}     ; create_html.vm
-entity edit page        ; edit.html                       ; ${WEB}/pages/${BEANNAME_LC}     ; edit_html.vm
-entity list page        ; list.html                       ; ${WEB}/pages/${BEANNAME_LC}     ; list_html.vm
+entity create page        ; create.html                       ; ${WEB}/gen/pages/${BEANNAME_LC}     ; create_html.vm
+entity edit page        ; edit.html                       ; ${WEB}/gen/pages/${BEANNAME_LC}     ; edit_html.vm
+entity list page        ; list.html                       ; ${WEB}/gen/pages/${BEANNAME_LC}     ; list_html.vm
 
 
-* ( Single file ) ; index.html ; ${WEB}/  ; index_html.vm ; 1
-* ( Single file ) ; offline.appcache ; ${WEB}/  ; offline_appcache.vm ; 1
+index ; index.html ; ${WEB}/gen/  ; index_html.vm ; 1
+appcache ; offline.appcache ; ${WEB}/gen/  ; offline_appcache.vm ; 1
 
-* ( Single file ) ; header.html ; ${WEB}/main/  ; header_html.vm ; 1
-* ( Single file ) ; footer.html ; ${WEB}/main/  ; footer_html.vm ; 1
+header ; header.html ; ${WEB}/gen/partials/  ; header_html.vm ; 1
+footer ; footer.html ; ${WEB}/gen/partials/  ; footer_html.vm ; 1
 
-* ( Single file ) ; mainctrl.js ; ${WEB}/js/  ; mainctrl_js.vm ; 1
+mainctrl ; mainctrl.js ; ${WEB}/gen/js/  ; mainctrl_js.vm ; 1
 
 
