SLA modif templates, ignore, notes

--- a/TelosysTools/templates/angularjs_html5/templates.cfg
+++ b/TelosysTools/templates/angularjs_html5/templates.cfg
@@ -17,12 +17,12 @@ entity edit page        ; edit.html                       ; ${WEB}/gen/pages/${B
 entity list page        ; list.html                       ; ${WEB}/gen/pages/${BEANNAME_LC}     ; list_html.vm
 
 
-index ; index.html ; ${WEB}/gen/  ; index_html.vm ; 1
-appcache ; offline.appcache ; ${WEB}/gen/  ; offline_appcache.vm ; 1
+index ; index.html ; ${WEB}/  ; index_html.vm ; 1
 
 header ; header.html ; ${WEB}/gen/partials/  ; header_html.vm ; 1
 footer ; footer.html ; ${WEB}/gen/partials/  ; footer_html.vm ; 1
 
 mainctrl ; mainctrl.js ; ${WEB}/gen/js/  ; mainctrl_js.vm ; 1
 
+appcache ; offline.appcache ; ${WEB}/  ; offline_appcache.vm ; 1
 
