--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	id="WebApp_ID" version="2.5">
 	<display-name>html5offline</display-name>
 	<welcome-file-list>
-		<welcome-file>gen/index.html</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 	
 	<mime-mapping>
